Tweaks scrollbars. Fixes overall height

--- a/www/css/blockly.css
+++ b/www/css/blockly.css
@@ -235,7 +235,7 @@
   background-color: #e4e4e4;
 }
 .blocklyTreeSeparator {
-  border-bottom: solid #F0F0F0 1px;
+  border-bottom: solid #edd2f9 5px;
   height: 0px;
   margin: 5px 0;
 }
